--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
-    "watch": "ng build --watch --configuration development",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod",
     
     "test": "ng test"
   },
