--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "heroku-postbuild": "ng build --prod",
-    
     "test": "ng test"
   },
   "private": true,
