--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
-   
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod",
     "test": "ng test"
   },
   "private": true,
