--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler-cli": "^14.1.0",
     "@angular/animations": "^14.1.0",
     "@angular/cdk": "^14.1.0",
+    "@angular/cli": "~14.1.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.1.0",
@@ -24,10 +24,11 @@
     "@angular/router": "^14.1.0",
     "angular-bootstrap-md": "^13.0.0",
     "bootstrap": "^5.2.0",
+    "express": "^4.18.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
