--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
   "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
   "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
   "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-  "node_modules/animate.css/animate.css",
+  
   "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
@@ -41,8 +41,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
