--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,14 @@
             },
             "development": {
               "buildOptimizer": false,
-              "optimization": false,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                },
+                "fonts": true
+              },
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
@@ -100,9 +107,22 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+  "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+  "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+  "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+  "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+  "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+  "node_modules/animate.css/animate.css",
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/chart.js/dist/Chart.js",
+  "node_modules/hammerjs/hammer.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         }
       }
