--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,14 @@
   "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
   "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
   "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-  
-  "node_modules/bootstrap/dist/css/bootstrap.min.css"
+  "node_modules/animate.css/animate.css",
+              
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -113,13 +117,12 @@
   "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
   "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
   "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-  "node_modules/animate.css/animate.css",
+  
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/chart.js/dist/Chart.js",
-  "node_modules/hammerjs/hammer.min.js",
+              
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
