--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "angular-bootstrap-md": "^13.0.0",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.8.0",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typescript": "~4.7.2",
