--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
+              "src/assets/styles/styles.css",
+              "src/assets/styles/custom-responsive-styles.css",
               "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
   "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
   "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
